ydb/library/yql/tests/postgresql/cases/int8.err
<sql-statement>
--
-- INT8
-- Test int8 64-bit integers.
--
CREATE TABLE INT8_TBL(q1 int8, q2 int8);
</sql-statement>
<sql-statement>
INSERT INTO INT8_TBL VALUES('  123   ','  456');
</sql-statement>
<sql-statement>
INSERT INTO INT8_TBL VALUES('123   ','4567890123456789');
</sql-statement>
<sql-statement>
INSERT INTO INT8_TBL VALUES('4567890123456789','123');
</sql-statement>
<sql-statement>
INSERT INTO INT8_TBL VALUES(+4567890123456789,'4567890123456789');
</sql-statement>
<sql-statement>
INSERT INTO INT8_TBL VALUES('+4567890123456789','-4567890123456789');
</sql-statement>
<sql-statement>
-- bad inputs
INSERT INTO INT8_TBL(q1) VALUES ('      ');
</sql-statement>
-stdin-:<main>: Fatal: Execution

    -stdin-:<main>:1:1: Fatal: Execution of node: YtFill!
    	-- bad inputs
	^
        -stdin-:<main>:1:1: Fatal: ERROR:  invalid input syntax for type bigint: "      "

        	-- bad inputs
	^
<sql-statement>
INSERT INTO INT8_TBL(q1) VALUES ('xxx');
</sql-statement>
-stdin-:<main>: Fatal: Execution

    -stdin-:<main>:1:1: Fatal: Execution of node: YtFill!
    	INSERT INTO INT8_TBL(q1) VALUES ('xxx');
	^
        -stdin-:<main>:1:1: Fatal: ERROR:  invalid input syntax for type bigint: "xxx"

        	INSERT INTO INT8_TBL(q1) VALUES ('xxx');
	^
<sql-statement>
INSERT INTO INT8_TBL(q1) VALUES ('3908203590239580293850293850329485');
</sql-statement>
-stdin-:<main>: Fatal: Execution

    -stdin-:<main>:1:1: Fatal: Execution of node: YtFill!
    	INSERT INTO INT8_TBL(q1) VALUES ('3908203590239580293850293850329485');
	^
        -stdin-:<main>:1:1: Fatal: ERROR:  value "3908203590239580293850293850329485" is out of range for type bigint

        	INSERT INTO INT8_TBL(q1) VALUES ('3908203590239580293850293850329485');
	^
<sql-statement>
INSERT INTO INT8_TBL(q1) VALUES ('-1204982019841029840928340329840934');
</sql-statement>
-stdin-:<main>: Fatal: Execution

    -stdin-:<main>:1:1: Fatal: Execution of node: YtFill!
    	INSERT INTO INT8_TBL(q1) VALUES ('-1204982019841029840928340329840934');
	^
        -stdin-:<main>:1:1: Fatal: ERROR:  value "-1204982019841029840928340329840934" is out of range for type bigint

        	INSERT INTO INT8_TBL(q1) VALUES ('-1204982019841029840928340329840934');
	^
<sql-statement>
INSERT INTO INT8_TBL(q1) VALUES ('- 123');
</sql-statement>
-stdin-:<main>: Fatal: Execution

    -stdin-:<main>:1:1: Fatal: Execution of node: YtFill!
    	INSERT INTO INT8_TBL(q1) VALUES ('- 123');
	^
        -stdin-:<main>:1:1: Fatal: ERROR:  invalid input syntax for type bigint: "- 123"

        	INSERT INTO INT8_TBL(q1) VALUES ('- 123');
	^
<sql-statement>
INSERT INTO INT8_TBL(q1) VALUES ('  345     5');
</sql-statement>
-stdin-:<main>: Fatal: Execution

    -stdin-:<main>:1:1: Fatal: Execution of node: YtFill!
    	INSERT INTO INT8_TBL(q1) VALUES ('  345     5');
	^
        -stdin-:<main>:1:1: Fatal: ERROR:  invalid input syntax for type bigint: "  345     5"

        	INSERT INTO INT8_TBL(q1) VALUES ('  345     5');
	^
<sql-statement>
INSERT INTO INT8_TBL(q1) VALUES ('');
</sql-statement>
-stdin-:<main>: Fatal: Execution

    -stdin-:<main>:1:1: Fatal: Execution of node: YtFill!
    	INSERT INTO INT8_TBL(q1) VALUES ('');
	^
        -stdin-:<main>:1:1: Fatal: ERROR:  invalid input syntax for type bigint: ""

        	INSERT INTO INT8_TBL(q1) VALUES ('');
	^
<sql-statement>
SELECT * FROM INT8_TBL;
</sql-statement>
BackTrace(void**, unsigned long)+29 (0x14033ECD)
TBackTrace::Capture()+30 (0x1403443E)
TWithBackTrace<yexception>::TWithBackTrace<>()+72 (0x13FD0568)
NYT::TNode::TTypeError::TTypeError()+25 (0x144DC3E9)
NYT::TNode::CheckType(NYT::TNode::EType) const+267 (0x144DD9BB)
NYT::TNode::AsString() const+30 (0x144DC53E)
WriteTableToStream(IOutputStream&, TVector<NYT::TNode, std::__y1::allocator<NYT::TNode> > const&, TVector<NYT::TNode, std::__y1::allocator<NYT::TNode> > const&)+830 (0x13EBBB7E)
Main(int, char**)+5748 (0x13EC0FB4)
main+273 (0x13EC2761)
??+0 (0x7F273A829D90)
__libc_start_main+128 (0x7F273A829E40)
??+0 (0x13E4C029)

(NYT::TNode::TTypeError) library/cpp/yson/node/node.cpp:829: TNode type string_node expected, actual type null
